SQS & SNS, Async Microservices Communication

--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -18,6 +18,13 @@ provider:
             - "s3:*"
           Resource:
             - "arn:aws:s3:::import-product"
+        - Effect: "Allow"
+          Action:
+            - "sqs:*"
+          Resource:
+            - "arn:aws:sqs:us-east-1:653231333242:catalogItemsQueue"
+  environment:
+    SQS_URL: "https://sqs.us-east-1.amazonaws.com/653231333242/catalogItemsQueue"
 
 functions:
   importProductsFile:
