--- a/import-service/package.json
+++ b/import-service/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.435.0",
+    "@aws-sdk/client-sqs": "^3.438.0",
     "@aws-sdk/s3-request-presigner": "^3.435.0",
     "csv-parser": "^3.0.0",
     "serverless": "^3.36.0"
